kubernetes/app/4-client/1-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: binance-b
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
